Add Console category hierarchy APIs
